# skylux-contact-centre-analysis

./: .gitignore  agent_master_pipeline.ipynb  pyproject.toml  resolution_rate_analysis.ipynb  utils.py
queries/: interactions_vw.sql
